--- a/Stopword Precessing/NLP_stopwords.ipynb
+++ b/Stopword Precessing/NLP_stopwords.ipynb
@@ -410,7 +410,7 @@
         "# Remove stopwords and apply stemming\n",
         "for i in range(len(sentences)):\n",
         "  words = nltk.word_tokenize(sentences[i])\n",
-        "  words = [porterStemmer.stem(word) for word in words if word not in stopwords.words('english')]\n",
+        "  words = [porterStemmer.stem(word) for word in words if word not in set(stopwords.words('english'))]\n",
         "  sentences[i] = ' '.join(words) # converting all the words into sentences"
       ],
       "metadata": {
