--- a/LSTM/Text-Pred/LSTM_Text_Prediction.ipynb
+++ b/LSTM/Text-Pred/LSTM_Text_Prediction.ipynb
@@ -286,9 +286,7 @@
         "  lines.append(i)\n",
         "\n",
         "# Converting list to string\n",
-        "data = \"\"\n",
-        "for i in lines:\n",
-        "  data = ' '.join(lines)\n",
+        "data = ' '.join(lines)",
         "\n",
         "# Replacing unnecessary stuff with space\n",
         "data = data.replace('\\n', '').replace('\\r','').replace('\\ufeff','').replace('“', '').replace(\"” \",\"\").replace(\"'\",\"\").replace(\":\",\"\")\n",
